Add user creation and information
